# mcp

./: README.md
example-1/: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
